# aVeN

./: .gitignore  README.md
api/: .env.example  Cargo.toml  README.md  test_api.sh  test_guardrails.sh
api/src/: constants.rs  embedding_service.rs  gemini_client.rs  guardrails.rs  main.rs  metrics.rs  pinecone_client.rs  prompt_manager.rs  query_service.rs
crawler/: constants.py  crawler.py  logger_utils.py  main.py  pdf_processor.py  requirements.txt
data-ingestion/: .env.example  knowledge_base_processor.py  pinecone_client.py  prompt_manager.py  query.py
evaluation/: aven_evaluation_results.json  evaluate_aven_ai.py  evaluation_questions.py
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
knowledge-base/: About-Aven-Card.txt  About-Aven-Card_0ce6a92a.txt  Aven-Building-the-machine-for-consumer-finance-A_4ce078b5.txt  Aven-Building-the-machine-for-consumer-finance-A_90d3ac79.txt  Aven-Disclosures-Aven-Card.txt  Aven-The-Most-Powerful-Credit-Card-for-Homeowners.txt  Aven-The-Most-Powerful-Credit-Card-for-Homeowners_b31d3212.txt  Careers-Aven-Card.txt  Careers-Aven-Card_23ac89c1.txt  Education-Aven-Card_2e7af062.txt  Get-In-Touch-with-Us-Aven-Card.txt  Get-The-Aven-App-Aven-Card.txt  Licenses-Aven-Card.txt  Our-Privacy-Policy-Aven-Card_69afd115.txt  PDF_Aven-CFPBCharmBooklet.txt  PDF_Aven-CFPBCharmBooklet_58ce0650.txt  PDF_Aven-CFPBHELOCBooklet.txt  PDF_Aven-CFPBHELOCBooklet_6d37cdde.txt  PDF_Aven-ConsumerPrivacyPolicyNotice.txt  PDF_Aven-ConsumerPrivacyPolicyNotice_d9abb7a1.txt  PDF_Aven-ESIGNConsent.txt  PDF_Aven-PifTerms.txt  (+9 more)
(+18 files in other folders)
